# knowledge

./: .gitignore  Cargo.toml  README.md
benches/: graph_scale.rs
proto/: event.proto
src/: auth.rs  daemon.rs  db.rs  events.rs  fuse.rs  graph.rs  identity.rs  lib.rs  main.rs  permission.rs  promotion.rs  retention.rs  token.rs  token_cache.rs  utils.rs  writer.rs
src/backup/: export.rs  import.rs  integrity.rs  mod.rs  snapshot.rs
src/lifecycle/: cleanup.rs  mod.rs  restore.rs  staged_uninstall.rs  trash.rs
src/migration/: checkpoint.rs  functions.rs  mod.rs  parser.rs  runner.rs
src/project/: config.rs  emitter.rs  mod.rs  parser.rs  signals.rs  store.rs  watch_config.rs  watcher.rs
src/quota/: config.rs  mod.rs  rate_limit.rs  tracker.rs
src/schema/: mod.rs  parser.rs  registry.rs  validator.rs
src/shared/: access.rs  duplicate.rs  mod.rs  schemas.rs  suggestion.rs
src/write/: create.rs  delete.rs  mod.rs  update.rs  validation.rs
systemd/: lunaris-graph.service
tests/: event_pipeline.rs
