[package]
name = "knowledge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "knowledge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
prost = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
